--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,15 @@
   ],
   "require": {
     "twig/twig": "^3.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "\\Fw2\\Lib\\": "../lib/",
+      "Fw2\\Controller\\": "/../controller/",
+      "Fw2\\Model\\": "/../model/"
+
+
+    }
+
   }
 }
